--- a/Client/package.json
+++ b/Client/package.json
@@ -22,8 +22,10 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.12",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.482.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "redux-persist": "^6.0.0",
